0.2.0 2016-01-20 thbe <project@bendler-net.de>
 * Rewrite spec file
 * Fix PID path
 * Fix bareos user home
 * Fix module indent

0.1.1 2016-01-20 thbe <project@bendler-net.de>
 * Disabled glusterfs plugin, not in EL6

0.1.0 2016-01-20 thbe <project@bendler-net.de>
 * Initial release