@@ -3,6 +3,7 @@
  * Fix PID path
  * Fix bareos user home
  * Fix module indent
+ * Switch to install -> config -> run pattern
 
 0.1.1 2016-01-20 thbe <project@bendler-net.de>
  * Disabled glusterfs plugin, not in EL6
